crates/spelldawn/tests/it/core/snapshots/it__core__action_tests__score_overlord_card.snap
---
source: crates/spelldawn/tests/it/core/action_tests.rs
assertion_line: 235
expression: "Summary::run(&response)"
---

command_list: 
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 300
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionIdentity { owner: User }
    MoveGameObjects: 
        id: Identity(User)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: User }
    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: 
            mana: 7
            action_tracker: 1
            score: 1
            can_take_action: true
        raid_active: false
channel_response: 
    VisitRoom: 
        initiator: Opponent
        room_id: RoomA
        visit_type: LevelUpRoom
    Delay: 500
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            revealed_to_viewer: true
            is_face_up: true
            card_icons: 
                arena_icon: "3"
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Scheme 31"
                rules_text: "<RulesText>"
                targeting: 
                valid_rooms: 
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
        create_position: 
            sorting_key: 3
            position: ObjectPositionIdentity { owner: Opponent }
        create_animation: Unspecified
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 300
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 3
            position: ObjectPositionIdentity { owner: Opponent }
    MoveGameObjects: 
        id: Identity(Opponent)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: Opponent }
    UpdateGameView: 
        opponent: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: 
            mana: 7
            action_tracker: 1
            score: 1
            can_take_action: true
        raid_active: false
    Delay: 1500
