crates/spelldawn/tests/it/core/snapshots/it__core__action_tests__switch_turn.snap
---
source: crates/spelldawn/tests/it/core/action_tests.rs
assertion_line: 264
expression: "Summary::run(&response)"
---

command_list: 
    CreateOrUpdateCard: 
        card: 
            card_id: C1
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 4294967295
            position: ObjectPositionDeck { owner: Opponent }
        create_animation: Unspecified
    MoveGameObjects: 
        id: C1
        position: 
            sorting_key: 2
            position: ObjectPositionHand { owner: Opponent }
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 8
            action_tracker: 0
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: VaultSanctumCrypts
            action_tracker: 3
        current_priority: Opponent
        raid_active: false
    DisplayGameMessage: Dawn
channel_response: 
    CreateOrUpdateCard: 
        card: 
            card_id: C1
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Champion Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: true
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_animation: DrawCard
    MoveGameObjects: 
        id: C1
        position: 
            sorting_key: 2
            position: ObjectPositionHand { owner: User }
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: VaultSanctumCrypts
            action_tracker: 3
        opponent: 
            side: Overlord
            mana: 8
            action_tracker: 0
        current_priority: User
        raid_active: false
    DisplayGameMessage: Dawn
