crates/spelldawn/tests/it/core/snapshots/it__core__action_tests__triggered_ability.snap
---
source: crates/spelldawn/tests/it/core/action_tests.rs
assertion_line: 351
expression: "Summary::run(&response)"
---

command_list: 
    CreateOrUpdateCard: 
        card: 
            card_id: O1
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
                top_left_icon: 
                top_right_icon: 
                bottom_left_icon: 
                bottom_right_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 4294967295
            position: ObjectPositionDeck { owner: Opponent }
        create_animation: Unspecified
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 6
            position: ObjectPositionHand { owner: Opponent }
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 1002
            action_tracker: 0
            can_take_action: false
        opponent: 
            side: Overlord
            mana: 998
            action_tracker: 3
            can_take_action: true
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: C1
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: false
        create_position: 
            sorting_key: 4
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 0
            position: ObjectPositionStaging
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            revealed_to_viewer: true
            is_face_up: true
            card_icons: 
                top_left_icon: "3"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: "8"
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Triggered Ability Take Mana At Dusk"
                rules_text: "<RulesText>"
                targeting: 
                valid_rooms: 
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
        create_position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
        create_animation: Unspecified
    Delay: 1500
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
    CreateOrUpdateCard: 
        card: 
            card_id: O45[1]
            revealed_to_viewer: true
            is_face_up: false
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Use Test Triggered Ability Take Mana At Dusk"
                rules_text: "<RulesText>"
                on_release_position: 
                    sorting_key: 2
                    position: ObjectPositionIntoCard { card_id: Some(CardIdentifier { side: Overlord, index: 45, ability_id: None }) }
        create_position: 
            sorting_key: 2
            position: ObjectPositionStaging
        create_animation: FromParentCard
    Delay: 1500
    MoveGameObjects: 
        id: O45[1]
        position: 
            sorting_key: 0
            position: ObjectPositionIntoCard { card_id: Some(CardIdentifier { side: Overlord, index: 45, ability_id: None }) }
    DestroyCard: 
        card_id: O45[1]
    DisplayGameMessage: Dusk
channel_response: 
    CreateOrUpdateCard: 
        card: 
            card_id: O1
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
                top_right_icon: 
                bottom_left_icon: 
                arena_icon: 
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Overlord Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: true
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_animation: DrawCard
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 6
            position: ObjectPositionHand { owner: User }
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 998
            action_tracker: 3
            can_take_action: true
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 1002
            action_tracker: 0
            can_take_action: false
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            revealed_to_viewer: true
            is_face_up: true
            card_icons: 
                arena_icon: "8"
            owning_player: User
        create_position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
        create_animation: Unspecified
    CreateOrUpdateCard: 
        card: 
            card_id: O45[1]
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Use Test Triggered Ability Take Mana At Dusk"
                rules_text: "<RulesText>"
                on_release_position: 
                    sorting_key: 2
                    position: ObjectPositionIntoCard { card_id: Some(CardIdentifier { side: Overlord, index: 45, ability_id: None }) }
        create_position: 
            sorting_key: 2
            position: ObjectPositionStaging
        create_animation: FromParentCard
    Delay: 1500
    MoveGameObjects: 
        id: O45[1]
        position: 
            sorting_key: 0
            position: ObjectPositionIntoCard { card_id: Some(CardIdentifier { side: Overlord, index: 45, ability_id: None }) }
    DestroyCard: 
        card_id: O45[1]
    DisplayGameMessage: Dusk
